--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@
     background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url('../img/banniere5.jpg') center center fixed
     no-repeat;
     background-size: cover;
-    height: 1200px;
+    height: auto;
 }
 .btn-order{
     color: var(--bs-teal);
